--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
 *.c.swp
 */bin
 */.idea
+*/homework
+*/screeny
+*/lesson-files
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
