--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 *.c.swp
-*/bin
 */.idea
 */homework
 */screeny
@@ -11,8 +10,12 @@
 !.vscode/extensions.json
 !.vscode/*.code-snippets
 
+.DS_store
+.idea
+
 # Local History for Visual Studio Code
 .history/
 
 # Built Visual Studio Code Extensions
 *.vsix
+bin
