--- a/operating_systems/lab3/Makefile
+++ b/operating_systems/lab3/Makefile
@@ -6,16 +6,16 @@ BIN_DIR=bin
 BUILD_DIR=build
 
 .PHONY: all
-all: countdown
+all: main
 
 # | - specify that depndency must exist before target is build, but
 # isn't target isn't rebuilded (in this case countdown) when | dependency changes
-countdown: countdown.o | $(BIN_DIR)
+main: main.o | $(BIN_DIR)
 	$(CC) $(LDFLAGS) $(BUILD_DIR)/$< -o $(BIN_DIR)/$@
 
 # $< is macro for getting first dependecy
 # $@ is macro for getting target name
-countdown.o: countdown.c | $(BUILD_DIR)
+main.o: main.c | $(BUILD_DIR)
 	$(CC) $(CFLAGS) $< -o $(BUILD_DIR)/$@
 
 $(BUILD_DIR):
@@ -27,5 +27,6 @@ $(BIN_DIR):
 .PHONY: clean
 clean:
 	rm -rf $(BIN_DIR) $(BUILD_DIR)
+	rm -rf results
 	find . -name "*.o" -type f -delete
 
